# rusty-history

./: .gitignore  ARCHITECTURE.md  Cargo.toml  README.md
src/: commandLog.rs  command_log.rs  main.rs
src/analysis/: frequency.rs  mod.rs  patterns.rs
src/capture/: bash.rs  mod.rs  zsh.rs
src/config/: mod.rs
src/display/: mod.rs  stats.rs  wrapped.rs
src/storage/: database.rs
