[package]
name = "rusty-history"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.31", features = ["bundled", "chrono"] }
dirs = "5.0"
anyhow = "1.0"
thiserror = "1.0"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Display & Formatting
colored = "2.1"
comfy-table = "7.1"
indicatif = "0.17"

# Utilities
regex = "1.10"
which = "6.0"
toml = "0.8"
